--- a/composer.json
+++ b/composer.json
@@ -4,5 +4,11 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {"OpenXBL\\": "src/"}
+    },
+    "require-dev": {
+        "phpunit/phpunit": "4.*",
+        "phpdocumentor/phpdocumentor": "2.*",
+        "squizlabs/php_codesniffer": "2.*",
+        "phing/phing": "^2.14"
     }
 }
