--- a/composer.json
+++ b/composer.json
@@ -3,12 +3,21 @@
     "description": "Wrapper for OpenXBL",
     "license": "MIT",
     "autoload": {
-        "psr-4": {"OpenXBL\\": "src/"}
+        "psr-4": {
+            "OpenXBL\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "OpenXBL\\Tests\\": "tests/"
+        }
+    },
+    "require": {
+        "php": ">=7.4",
+        "guzzlehttp/guzzle": "^7"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.*",
-        "phpdocumentor/phpdocumentor": "2.*",
-        "squizlabs/php_codesniffer": "2.*",
-        "phing/phing": "^2.14"
+        "phpunit/phpunit": "^9",
+        "mockery/mockery": "^1.5"
     }
 }
